[package]
name = "hashtable_server"
version = "0.1.0"
authors = ["Santhanagopalan <santhanagopalank1998@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.0.0"
leapfrog = "0.2.2"
striped_hashmap = { git = "https://github.com/sgopalan98/StripedHashTable" }
structopt = "0.3.25"
once_cell = "1.13.1"
num_cpus = "1.13.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.99"

[profile.release]
debug = true
debug-assertions = true
lto = true
codegen-units = 1
panic = "abort"
